added delete button

--- a/src/styles/details.css
+++ b/src/styles/details.css
@@ -27,6 +27,33 @@
     margin-top: 24px;
     font-family:'Patua One';
 }
+.button:hover {
+    background-color: #4d5efc; /* Green */
+    color: white;
+  }
+
+.request__delete {
+    background-color: #1418f5;
+    border: none;
+    color: white;
+    padding: 4px 8px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+
+    font-family:'Patua One';
+}
+
+li {
+    font-size: 16px;
+    list-style-type: none;
+}
+
 
 body {
     background-color: rgb(156, 154, 154);
